--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
                 </ul>
             </div>
         </div>
+        <div class="banner-container">
+            <div class="banner-info">
+                <h1 class="title">
+                    <span class="primary">Digital</span> Agency You <br>
+                     Can Rely Upon !
+                 </h1>
+                 <p class="description">
+                     Hymenaeos! Omnis arcu vitae? Phasellus irure cupidatat incidunt, semper metus, nibh adipisci assumenda odio, quos, senectus vehicula occaecat, officiis malesuada cras.
+                 </p>
+                 <button class="btn">Discover me</button>
+                 <button class="btn bg-primary">Hire us now</button>
+            </div>
+        </div>
     </header>
     <main></main>
     <footer></footer>
