--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Agency Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <div class="nav-container">
@@ -27,17 +29,42 @@
             <div class="banner-info">
                 <h1 class="title">
                     <span class="primary">Digital</span> Agency You <br>
-                     Can Rely Upon !
-                 </h1>
-                 <p class="description">
-                     Hymenaeos! Omnis arcu vitae? Phasellus irure cupidatat incidunt, semper metus, nibh adipisci assumenda odio, quos, senectus vehicula occaecat, officiis malesuada cras.
-                 </p>
-                 <button class="btn">Discover me</button>
-                 <button class="btn bg-primary">Hire us now</button>
+                    Can Rely Upon !
+                </h1>
+                <p class="description">
+                    Hymenaeos! Omnis arcu vitae? Phasellus irure cupidatat incidunt, semper metus, nibh adipisci
+                    assumenda odio, quos, senectus vehicula occaecat, officiis malesuada cras.
+                </p>
+                <button class="btn">Discover me</button>
+                <button class="btn bg-primary">Hire us now</button>
             </div>
         </div>
     </header>
-    <main></main>
+    <main>
+        <div class="service-container">
+            <div class="left-side-container">
+                <button class="btn">Hire us now</button>
+                <h1>Services We Can Help You With !</h1>
+                <p>
+                    Vero id posuere tempus aspernatur quaerat mollis voluptatum eveniet porro viverra <br> libero
+                    habitasse porro fames quos pharetra diam cupidatat ligula! Netus! Quos dignissi mos
+                </p>
+                <ol>
+                    <li>Nobis ridiculus cupiditate egestas commodi</li>
+                    <li>Ipsum dui curabitur dapibuish mollitia</li>
+                </ol>
+            </div>
+            <div class="right-side-container">
+                <div class="all-boxes">
+                    <div class="box">
+                        <img class="icon " src="" alt="">
+                        <h2>web development</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
     <footer></footer>
 </body>
+
 </html>
